semaine6/kanban-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
      - name: kanban-app
        image: wkrzywiec/kanban-app:k8s
        ports:
        - containerPort: 8080
