semaine6/kanban-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
spec:
  type: ClusterIP
  selector:
    app: kanban-app
  ports:
    - port: 8080
      targetPort: 8080
