semaine6/kanban-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-ui
spec:
  type: ClusterIP
  selector:
    app: kanban-ui
  ports:
    - port: 80
      targetPort: 80
